<resources>
    

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>

    <!--自定义字符串 开始-->
    <string name="app_name">心愿纸</string>
    <string name="wish">心愿纸</string>
    <string name="mood">心情街</string>
    <string name="confession">表白墙</string>
    <string name="comment">评论</string>
    <string name="like">赞</string>
    <string name="forward">转发</string>
    <string name="notLanded">未登陆</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!--自定义字符串 结束-->
</resources>
