<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v4.view.ViewPager>
    </FrameLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/linearLayout1">

            <FrameLayout
                android:layout_width="30dp"
                android:layout_height="30dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView_1n"
                    android:src="@mipmap/f1_n" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView_1a"
                    android:src="@mipmap/f1_a" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_m"
                android:textColor="#494949"
                android:text="@string/wish"
                android:id="@+id/textView1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/linearLayout2">

            <FrameLayout
                android:layout_width="30dp"
                android:layout_height="30dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView_2n"
                    android:src="@mipmap/f2_n" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView_2a"
                    android:src="@mipmap/f2_a" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_m"
                android:textColor="#494949"
                android:text="@string/mood"
                android:id="@+id/textView2"
                android:layout_gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/linearLayout3">

            <FrameLayout
                android:layout_width="30dp"
                android:layout_height="30dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView_3n"
                    android:src="@mipmap/f3_n" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView_3a"
                    android:src="@mipmap/f3_a" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_m"
                android:textColor="#494949"
                android:text="@string/confession"
                android:id="@+id/textView3" />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
