<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_fg_default"
    android:id="@+id/linearLayout_item"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_default"
        android:paddingRight="@dimen/margin_default">

        <ImageView
            android:id="@+id/imageView_head"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/default_avatar_male" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_toRightOf="@+id/imageView_head"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_nickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:textColor="@color/font_style"
                android:textSize="@dimen/font_default"
                android:text="这个是昵称" />

            <TextView
                android:id="@+id/textView_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/font_unfocus"
                android:textSize="@dimen/font_m"
                android:text="这个是学校" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="false"
            android:layout_marginTop="@dimen/margin_default"
            android:textColor="@color/font_unfocus"
            android:textSize="@dimen/font_s"
            android:text="时间" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/font_default"
        android:textSize="@dimen/font_default"
        android:text="这是发表的内容这是发表的内容这是发表的内容这是发表的内容这是发表的内容这是发表的内容这是发表的内容这是发表的内容这是发表的内容这是发表的内容这是发表的内容。"
        android:paddingLeft="@dimen/margin_default"
        android:paddingRight="@dimen/margin_default" />

    <com.zhuliyi.app.wishwall.view.SodukuGridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridView_image"
        android:gravity="center"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:paddingLeft="@dimen/pic_grid_spacing"
        android:paddingRight="@dimen/pic_grid_spacing"
        android:verticalSpacing="@dimen/pic_grid_spacing"
        android:horizontalSpacing="@dimen/pic_grid_spacing"></com.zhuliyi.app.wishwall.view.SodukuGridView>
    <!--<FrameLayout-->
        <!--android:id="@+id/frameLayout_grid"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
    <!--</FrameLayout>-->
    <!--<fragment-->
        <!--android:id="@+id/fragment_grid"-->
        <!--android:name="com.zhuliyi.app.wishwall.fragment.ImageGridFragment"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--tools:layout="@layout/fragment_image_grid"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_community_comment" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_short"
                android:textColor="@color/font_unfocus"
                android:textSize="@dimen/font_m"
                android:text="@string/comment" />
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/linearLayout_like"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_community_like_disabled" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_short"
                android:textColor="@color/font_unfocus"
                android:textSize="@dimen/font_m"
                android:text="@string/like" />
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/linearLayout_forward"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_community_forward" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_short"
                android:textColor="@color/font_unfocus"
                android:textSize="@dimen/font_m"
                android:text="@string/forward" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/background" />
</LinearLayout>
